# simple-markdown-parser

./: Cargo.toml  README.md  lib.rs
.github/workflows/: crates.yml  lines-of-code.yml  publish.yml
examples/: analyser.rs  markdown_analyser.rs  parse.rs  parse_extras.rs
src/: lib.rs  utilities.rs
src/extras/: emit.rs
tests/: blocks.rs  items.rs
