[package]
name = "simple-markdown-parser"
description = "A simple library for handling markdown. May include extra utilities"
license = "MIT"
repository = "https://github.com/kaleidawave/simple-markdown-parser"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
extras = []
utilities = []

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
tsify = { version = "0.4", features = ["js"] }
js-sys = "0.3"
console_error_panic_hook = "=0.1.7"

[dev-dependencies]
pretty_assertions = "1.3.0"

[lints.clippy]
missing_panics_doc = "allow"
missing_errors_doc = "allow"
result_unit_err = "allow"
pedantic = { level = "warn", priority = -1 }
